finished products and fixed them on mobile version

--- a/mobile.css
+++ b/mobile.css
@@ -167,4 +167,11 @@
         align-items: center;
         flex-direction: column;
     }
+    /* product */
+    .product {
+        padding-top: 160px;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+    }
 }
